# WxFrog

./: .gitignore  .readthedocs.yaml  pyproject.toml  pytest.ini  readme.md  requirements.txt  setup.cfg
.github/workflows/: pypi_publish.yml
doc/: requirements.txt
doc/source/: conf.py  configuration.rst  custom_directives.py  index.rst  introduction.rst  manual.rst  release_notes.rst
doc/source/_static/: custom.css
src/examples/advanced/: gui.pyw
src/examples/advanced/data/: configuration.yml
src/examples/hello_world/: gui.pyw
src/examples/hello_world/data/: configuration.yml
src/wxfrog/: __init__.py  _version.py  app.py  config.py  controller.py  engine.py  events.py  model.py  scenarios.py  utils.py
src/wxfrog/examples/advanced/: gui.py
src/wxfrog/examples/advanced/data/: configuration.yml
src/wxfrog/examples/hello_world/: gui.py
src/wxfrog/examples/hello_world/data/: configuration.yml
src/wxfrog/models/: casestudy.py  engine.py  html.py  model.py  scenarios.py  tooltip.py
src/wxfrog/views/: about.py  auxiliary.py  canvas.py  casestudy.py  colors.py  config_error_dialog.py  engine_monitor.py  frame.py  image.py  number_ctrl.py  parameter.py  property_picker.py  quantity_control.py  results.py  scenario.py
src/wxfrog_example/: example_gui.pyw
src/wxfrog_example/data/: configuration.yml
testing/: casestudy_test.py  conftest.py  html_table_test.py  utils_test.py
