[build-system]
# Tells pip/build how to build the package
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WxFrog"
# read version from code
dynamic = ["version"]

authors = [
    { name = "Volker Siepmann", email = "volker.siepmann@gmail.com" },
]
description = "WX-python FROntend kept Generic"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "LGPL-3.0-or-later" }
keywords = ["process modelling", "user interface"]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "wxpython",
    "pint",
    "pyyaml",
    "Pypubsub"
]

[project.optional-dependencies]
doc = [
    "Sphinx",
    "sphinxcontrib-bibtex",
    "sphinx-copybutton",
]
dist = [
    "build",
    "twine",
]
test = [
    "pytest",
]
dev = [
    "pytest",
    "build",
    "twine",
    "Sphinx",
    "sphinxcontrib-bibtex",
    "sphinx-copybutton",
]

[tool.setuptools]
# include package data declared via MANIFEST.in or package-data keys
include-package-data = true

[tool.setuptools.package-data]
wxfrog = ["py.typed"]
"*"    = ["src/wxfrog/**/*.yml"]

# dynamic version: same effect as `version = attr: wxfrog._version.version`
[tool.setuptools.dynamic]
version = { attr = "wxfrog._version.version" }