[metadata]
name = WxFrog
version = attr: wxfrog._version.version
author = Volker Siepmann
author_email= volker.siepmann@gmail.com,
description = WX-python FROntend kept Generic
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/VolkerSiep/SiMu
keywords = process modelling, user interface
license = LGPL-3.0-or-later
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.11
include_package_data = true
install_requires =
    wxpython
    pint
    pyyaml

[options.extras_require]
doc =
    Sphinx
    sphinxcontrib-bibtex
    sphinx-copybutton
dist =
    build
    twine
test =
    pytest
dev =
    %(test)s
    %(dist)s
    %(doc)s

[options.package_data]
wxfrog =
    py.typed
* =
    src/wxfrog/**/*.yml
